""" Builds curl.
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "cmake")

filegroup(
    name = "all_srcs",
    # TODO(mvukov) Minimize srcs.
    srcs = glob(["**"]),
)

cmake(
    name = "curl",
    build_args = [
        "--",
        "-j4",
    ],
    cache_entries = {
        "CMAKE_POSITION_INDEPENDENT_CODE": "ON",  # Must be set!
        "CMAKE_PREFIX_PATH": "$EXT_BUILD_DEPS/openssl:$EXT_BUILD_DEPS/zlib",
        "OPENSSL_CRYPTO_LIBRARY": "$EXT_BUILD_DEPS/openssl/lib/libcrypto.a",
        "OPENSSL_SSL_LIBRARY": "$EXT_BUILD_DEPS/openssl/lib/libssl.a",
        # curl specific options.
        # For the following flags, process CMakeLists.txt with option\(([^\s]+)
        # on e.g. https://regexr.com/ .
        "CURL_WERROR": "OFF",
        "PICKY_COMPILER": "ON",
        "BUILD_CURL_EXE": "OFF",
        "BUILD_SHARED_LIBS": "OFF",
        "ENABLE_ARES": "OFF",
        "CURL_STATIC_CRT": "OFF",
        "ENABLE_UNICODE": "OFF",
        "CURL_LTO": "OFF",
        "ENABLE_THREADED_RESOLVER": "ON",
        "ENABLE_DEBUG": "OFF",
        "ENABLE_CURLDEBUG": "OFF",
        "CURL_ENABLE_EXPORT_TARGET": "OFF",
        "CURL_DISABLE_ALTSVC": "OFF",
        "CURL_DISABLE_COOKIES": "OFF",
        "CURL_DISABLE_DICT": "OFF",
        "CURL_DISABLE_DOH": "OFF",
        "CURL_DISABLE_FILE": "OFF",
        "CURL_DISABLE_FTP": "OFF",
        "CURL_DISABLE_GETOPTIONS": "OFF",
        "CURL_DISABLE_GOPHER": "OFF",
        "CURL_DISABLE_HSTS": "OFF",
        "CURL_DISABLE_HTTP": "OFF",
        "CURL_DISABLE_HTTP_AUTH": "OFF",
        "CURL_DISABLE_IMAP": "OFF",
        "CURL_DISABLE_LDAP": "ON",
        "CURL_DISABLE_LDAPS": "ON",
        "CURL_DISABLE_LIBCURL_OPTION": "OFF",
        "CURL_DISABLE_MIME": "OFF",
        "CURL_DISABLE_MQTT": "OFF",
        "CURL_DISABLE_NETRC": "OFF",
        "CURL_DISABLE_NTLM": "OFF",
        "CURL_DISABLE_PARSEDATE": "OFF",
        "CURL_DISABLE_POP3": "OFF",
        "CURL_DISABLE_PROGRESS_METER": "OFF",
        "CURL_DISABLE_PROXY": "OFF",
        "CURL_DISABLE_RTSP": "OFF",
        "CURL_DISABLE_SHUFFLE_DNS": "OFF",
        "CURL_DISABLE_SMB": "OFF",
        "CURL_DISABLE_SMTP": "OFF",
        "CURL_DISABLE_SOCKETPAIR": "OFF",
        "CURL_DISABLE_TELNET": "OFF",
        "CURL_DISABLE_TFTP": "OFF",
        "CURL_DISABLE_VERBOSE_STRINGS": "OFF",
        "HTTP_ONLY": "OFF",
        "ENABLE_IPV6": "ON",
        "CURL_ENABLE_SSL": "ON",
        "CURL_USE_SECTRANSP": "OFF",
        "CURL_USE_SCHANNEL": "OFF",
        "CURL_WINDOWS_SSPI": "OFF",
        "CURL_USE_MBEDTLS": "OFF",
        "CURL_USE_BEARSSL": "OFF",
        "CURL_USE_WOLFSSL": "OFF",
        "CURL_USE_OPENSSL": "ON",
        "CURL_DISABLE_OPENSSL_AUTO_LOAD_CONFIG": "OFF",
        "CURL_BROTLI": "OFF",
        "CURL_ZSTD": "OFF",
        "USE_NGHTTP2": "OFF",
        "USE_NGTCP2": "OFF",
        "USE_QUICHE": "OFF",
        "USE_MSH3": "OFF",
        "USE_WIN32_LDAP": "OFF",
        "USE_LIBIDN2": "OFF",
        "USE_WIN32_IDN": "OFF",
        "CURL_USE_LIBPSL": "OFF",
        "CURL_USE_LIBSSH2": "OFF",
        "CURL_USE_LIBSSH": "OFF",
        "CURL_USE_GSSAPI": "OFF",
        "ENABLE_UNIX_SOCKETS": "ON",
        "ENABLE_WEBSOCKETS": "OFF",
        "BUILD_TESTING": "OFF",
    },
    generate_args = ["-GNinja"],
    lib_source = ":all_srcs",
    out_static_libs = ["libcurl.a"],
    postfix_script = """\
cp ${BUILD_TMPDIR}/lib/libcurl.a ${INSTALLDIR}/lib
    """,
    visibility = ["//visibility:public"],
    deps = [
        "@boringssl//:ssl",
        "@zlib",
    ],
)
