""" Builds curl.
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

configure_make(
    name = "curl",
    lib_source = ":all_srcs",
    configure_options = [
        "--with-ssl=$$EXT_BUILD_DEPS/boringssl",
        "--with-zlib=$$EXT_BUILD_DEPS/zlib",
        "--disable-shared",
        "--enable-static",
        "--disable-ldap",
        "--disable-ldaps",
        "--disable-rtsp",
        "--disable-dict",
        "--disable-telnet",
        "--disable-tftp",
        "--disable-pop3",
        "--disable-imap",
        "--disable-smtp",
        "--disable-gopher",
        "--disable-mqtt",
        "--without-libidn2",
        "--without-librtmp",
        "--without-libssh2",
        "--without-nghttp2",
    ],
    # out_static_libs = ["libcurl.a"],
    postfix_script = """
echo "=== POSTFIX DEBUG ==="
echo "INSTALLDIR: $${INSTALLDIR}"
ls -R $${INSTALLDIR}
echo "=== END POSTFIX DEBUG ==="
    """,
    visibility = ["//visibility:public"],
    deps = [
        "@boringssl//:ssl",
        "@zlib",
    ],
)
