""" Builds curl.
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "all_srcs",
    srcs = glob(["**"]),
)

configure_make(
    name = "curl",
    lib_source = ":all_srcs",
    configure_options = [
        "--with-ssl=$$EXT_BUILD_DEPS",
        "--with-zlib=$$EXT_BUILD_DEPS",
        "--disable-shared",
        "--enable-static",
        "--disable-ldap",
        "--disable-ldaps",
        "--disable-rtsp",
        "--disable-dict",
        "--disable-telnet",
        "--disable-tftp",
        "--disable-pop3",
        "--disable-imap",
        "--disable-smtp",
        "--disable-gopher",
        "--disable-mqtt",
        "--without-libidn2",
        "--without-librtmp",
        "--without-libssh2",
        "--without-nghttp2",
        "--without-brotli",
    ],
    # out_static_libs = ["libcurl.a"],
    visibility = ["//visibility:public"],
    deps = [
        "@boringssl//:ssl",
        "@zlib",
    ],
)
