""" Builds fmt
"""

load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "fmt",
    srcs = glob(
        ["src/**/*.cc"],
        exclude = ["src/fmt.cc"],
    ),
    hdrs = glob(["include/**/*.h"]),
    copts = ["-w"],
    includes = ["include"],
    visibility = ["//visibility:public"],
)
