""" Builds gps_umd.
"""

load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

ros2_interface_library(
    name = "gps_msgs",
    srcs = glob(["gps_msgs/msg/*.msg"]),
    visibility = ["//visibility:public"],
    deps = ["@ros2_common_interfaces//:std_msgs"],
)

cpp_ros2_interface_library(
    name = "cpp_gps_msgs",
    visibility = ["//visibility:public"],
    deps = [":gps_msgs"],
)
