""" Buildfile for GPSFix msgs
"""

load(
    "@com_github_mvukov_rules_ros2//ros2:interfaces.bzl",
    "cpp_ros2_interface_library",
    "ros2_interface_library",
)

filegroup (
    name = "gps_msgs_fg",
    srcs = glob(["gps_msgs/msgs/*.msg"]),
    visibility = ["//visibility:public"],
)

ros2_interface_library(
    name = "gps_fix_msgs",
    srcs = glob(["gps_msgs/msg/*.msg"]),
    deps = ["@ros2_common_interfaces//:std_msgs"],
    visibility = ["//visibility:public"],
)

cpp_ros2_interface_library(
    name = "cpp_gps_fix_msgs",
    deps = [":gps_fix_msgs",],
    visibility = ["//visibility:public"],
)
