load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

# "clap": crate.spec(features = ["derive"], version = "4.1.8"),
#             "color-eyre": crate.spec(default_features = False, version = "0.6.2"),
#             "command-group": crate.spec(features = ["with-tokio"], version = "2.0.0"),
#             "console": crate.spec(default_features = False, features = ["ansi-parsing"], version = "0.15.2"),
#             "nix": crate.spec(default_features = False, features = ["signal"], version = "0.26.1"),
#             "once_cell": crate.spec(version = "1.16.0"),
#             "regex": crate.spec(version = "1.6.0"),
#             "serde": crate.spec(features = ["derive"], version = "1.0.126"),
#             "thiserror": crate.spec(version = "1.0"),
#             "time": crate.spec(features = ["formatting", "macros"], version = "0.3.17"),
#             "tokio": crate.spec(features = ["fs", "macros", "process", "rt-multi-thread", "signal", "sync"], version = "1.26.0"),
#             "toml": crate.spec(version = "0.5"),
#             "tracing": crate.spec(version = "0.1"),
#             "tracing-subscriber": crate.spec(default_features = False, features = ["env-filter", "fmt", "std"], version = "0.3"),
#             "users": crate.spec(version = "0.1"),

rust_library(
    name = "groundcontrol",
    srcs = [
        "src/command.rs",
        "src/config.rs",
        "src/formatter.rs",
        "src/lib.rs",
        "src/process.rs",
    ],
    deps = [
        "@ground_control_crate_index//:clap",
        "@ground_control_crate_index//:color-eyre",
        "@ground_control_crate_index//:command-group",
        "@ground_control_crate_index//:console",
        "@ground_control_crate_index//:nix",
        "@ground_control_crate_index//:once_cell",
        "@ground_control_crate_index//:regex",
        "@ground_control_crate_index//:serde",
        "@ground_control_crate_index//:thiserror",
        "@ground_control_crate_index//:time",
        "@ground_control_crate_index//:tokio",
        "@ground_control_crate_index//:toml",
        "@ground_control_crate_index//:tracing",
        "@ground_control_crate_index//:tracing-subscriber",
        "@ground_control_crate_index//:users",
    ],
)

rust_binary(
    name = "ground_control",
    srcs = ["src/main.rs"],
    visibility = ["//visibility:public"],
    deps = [
        ":groundcontrol",
        # "@ground_control_crate_index//:command-group",
        # "@ground_control_crate_index//:clap",
        # "@ground_control_crate_index//:color-eyre",
        # "@ground_control_crate_index//:console",
        # "@ground_control_crate_index//:nix",
        # "@ground_control_crate_index//:once_cell",
        # "@ground_control_crate_index//:regex",
        # "@ground_control_crate_index//:serde",
        # "@ground_control_crate_index//:thiserror",
        # "@ground_control_crate_index//:time",
        # "@ground_control_crate_index//:tokio",
        # "@ground_control_crate_index//:toml",
        # "@ground_control_crate_index//:tracing",
        # "@ground_control_crate_index//:tracing-subscriber",
        # "@ground_control_crate_index//:users",
    ],
)
